  * Windows - directory where the executable is placed.
  if you want to use a more updated version than the one distributed with the emulator, just copy it either in the executable directory or in the working directory of the emulator, which can also be opened from the "File -> Open working directory" menu.
- Added full support for Vs System (UniSystem and DualSystem).
- Windows x86_64: Update to Qt5 5.15.8 (#279).
- Fixed the management of keyboard input (#317).
- Fixed map of one keyboard button to multiple controllers (#277).
- Fixed FDS wavetable pitch (#295).
- Fixed patching of IPS files.
- Updated Portuguese, Russian and Spanish translations (thx to Felipefpl, Matheus Scattolin Anselmo, Alexey Timonin and MS-PC).
Note: Due to the numerous changes I'm making to the core of the emulator, new bugs may have been introduced, if you find roms no longer work correctly compared to the previous version, please let me know.

0.110
- Added support to Wayland.
- Added support for "Fullscreen in window" with Wayland (the only type of fullscreen supported for now).
- Added iNES/NES 2.0 header editor.
- Added support for "Family Basic Keyboard" and "Subor Keyboard".
  * It's possible to capture and release keyboard input with the shortcut "Scrollock" and open and
    close a virtual keyboard with "CTRL+X".
  * Implemented the "Paste" function. It's possible to paste the text by dragging it in the main
    window of the emulator or copying it and then press the right mouse button and selecting "Paste".
    The text will be inserted through the simulation of the pressure of the keys and it will always
    be possible to interrupt the insertion by pressing the ESC key. During the paste, the Fast Forwarding
    will be active to reduce the waiting time.
  * Added support for the tape data recorder. Added a "Tape" submenu in the "NES" menu, also the same
    menu is present in the context menu of the main window (right click) when the Keyboard is in use.